application/sample-app1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app1
  namespace: application
spec:
  selector:
    app: sample-app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
